--- a/app/assets/stylesheets/carts.scss
+++ b/app/assets/stylesheets/carts.scss
@@ -31,6 +31,13 @@
       border-top: solid thin;
     }
   }
+  .actions {
+    text-align: right;
+
+    form {
+      display: inline-block;
+    }
+  }
   input[type="submit"] {
     background-color: #881;
     border-radius: 0.354em;
@@ -38,8 +45,22 @@
     color: white;
     font-size: 1em;
     padding: 0.354em 1em;
+    cursor: pointer;
   }
-  input[type="submit"] {
+  input[type="submit"]:hover {
     background-color: #992;
+  }
+
+  input.checkout {
+    background-color: #bfb;
+    border-radius: 0.354em;
+    border: solid thin #888;
+    color: black;
+    font-weight: bold;
+    padding: 0.354em 1em;
+
+    &:hover {
+      background-color: #9d9;
+    }
   }
 }
